; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/disassembler/extr_dmresrcl.c_AcpiDmAddressPrefix.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/disassembler/extr_dmresrcl.c_AcpiDmAddressPrefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"Word\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"DWord\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"QWord\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"Extended\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @AcpiDmAddressPrefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AcpiDmAddressPrefix(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %12 [
    i32 131, label %4
    i32 130, label %6
    i32 129, label %8
    i32 128, label %10
  ]

4:                                                ; preds = %1
  %5 = call i32 @AcpiOsPrintf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  br label %13

6:                                                ; preds = %1
  %7 = call i32 @AcpiOsPrintf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  br label %13

8:                                                ; preds = %1
  %9 = call i32 @AcpiOsPrintf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  br label %13

10:                                               ; preds = %1
  %11 = call i32 @AcpiOsPrintf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  br label %13

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12, %10, %8, %6, %4
  ret void
}

declare dso_local i32 @AcpiOsPrintf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
